<resources>
    <string name="app_name">iWuster</string>
    <string name="title_home">主页</string>
    <string name="title_discover">发现</string>
    <string name="title_notifications">消息</string>
    <string name="title_mine">我</string>
    <string name="stu_id">学号</string>
    <string name="term_week">修改学期/周次</string>
    <string name="add_course">添加课程</string>
    <string name="theme">个性化设置</string>
    <string name="is_load_course">is_load_course</string>
    <string name="load_course">加载课表中...</string>
    <string name="sp_term_loaded">term_loaded</string>
    <string name="no_data">无相关数据</string>
    <string name="sp_stu_id">sp_stu_id</string>
    <string name="sp_date">sp_date</string>
    <string name="sp_week">sp_week</string>
    <string name="sp_zc">sp_current_week</string>
    <string name="dean">掌上教务</string>
    <string name="calss_schedule">课程表</string>
    <string name="score">成绩</string>
    <string name="select_course">选课</string>
    <string name="evaluation">评教</string>
    <string name="empty_classroom">空闲教室</string>
    <string name="credit">学分统计</string>
    <string name="library">图书馆</string>
    <string name="book_search">图书搜索</string>
    <string name="my_borrow">我的借阅</string>
    <string name="my_library">我的图书馆</string>
    <string name="school_life">校园生活</string>
    <string name="card">一卡通</string>
    <string name="bus">校车时刻</string>
    <string name="yellow_page">黄页</string>
    <string name="other_fun">其他功能</string>
    <string name="class_note">课堂笔记</string>
    <string name="lost_and_found">失物招领</string>
    <string name="secret">树洞</string>
    <string name="current_zc">当前周次</string>
    <string name="current_term">当前学期</string>
    <string name="reload_class_schedule">重新加载课表...</string>
    <string name="load_succ">加载成功</string>
    <string name="alpha">透明度</string>
    <string name="corner">圆角大小</string>
    <string name="sp_alpha">alpha</string>
    <string name="sp_corner">corner</string>
    <string name="share_class_schedule">分享课表</string>
    <string name="socre">成绩</string>
</resources>
