<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_spacing"
            app:cardElevation="0dp"
            app:cardCornerRadius="@dimen/card_corner_radius">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_hint"
                    android:drawableLeft="@drawable/shape_tag"
                    android:drawablePadding="@dimen/sub_small_spacing"
                    android:padding="@dimen/small_spacing"
                    android:layout_marginStart="@dimen/s_small_spacing"
                    android:textSize="@dimen/sub_medium_text"
                    android:text="@string/dean"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.lvqingyang.iwuster.view.DiscoverItem
                        android:id="@+id/di_class_schedule"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:background="?android:attr/selectableItemBackground"
                        app:icon="@drawable/ic_class_schedule"
                        app:name="@string/calss_schedule"/>
                    <com.lvqingyang.iwuster.view.DiscoverItem
                        android:id="@+id/di_score"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:background="?android:attr/selectableItemBackground"
                        app:icon="@drawable/ic_score"
                        app:name="@string/score"/>
                    <com.lvqingyang.iwuster.view.DiscoverItem
                        android:id="@+id/di_select_course"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:background="?android:attr/selectableItemBackground"
                        app:icon="@drawable/ic_select_course"
                        app:name="@string/select_course"/>
                    <com.lvqingyang.iwuster.view.DiscoverItem
                        android:id="@+id/di_evaluation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:background="?android:attr/selectableItemBackground"
                        app:icon="@drawable/ic_evaluation"
                        app:name="@string/evaluation"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.lvqingyang.iwuster.view.DiscoverItem
                        android:id="@+id/di_empty_classroom"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:background="?android:attr/selectableItemBackground"
                        app:icon="@drawable/ic_empty_classroom"
                        app:name="@string/empty_classroom"/>
                    <com.lvqingyang.iwuster.view.DiscoverItem
                        android:id="@+id/di_credit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:background="?android:attr/selectableItemBackground"
                        app:icon="@drawable/ic_credit"
                        app:name="@string/credit"/>
                    <View
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_spacing"
            app:cardElevation="0dp"
            app:cardCornerRadius="@dimen/card_corner_radius">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_hint"
                    android:drawableLeft="@drawable/shape_tag"
                    android:drawablePadding="@dimen/sub_small_spacing"
                    android:padding="@dimen/small_spacing"
                    android:layout_marginStart="@dimen/s_small_spacing"
                    android:textSize="@dimen/sub_medium_text"
                    android:text="@string/school_life"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.lvqingyang.iwuster.view.DiscoverItem
                    android:id="@+id/di_book_search"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:background="?android:attr/selectableItemBackground"
                    app:icon="@drawable/ic_book_search"
                    app:name="@string/book_search"/>
                    <com.lvqingyang.iwuster.view.DiscoverItem
                        android:id="@+id/di_my_library"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:background="?android:attr/selectableItemBackground"
                        app:icon="@drawable/ic_my_library"
                        app:name="@string/my_library"/>
                    <com.lvqingyang.iwuster.view.DiscoverItem
                        android:id="@+id/di_card"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:background="?android:attr/selectableItemBackground"
                        app:icon="@drawable/ic_card"
                        app:name="@string/card"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.lvqingyang.iwuster.view.DiscoverItem
                        android:id="@+id/di_bus"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:background="?android:attr/selectableItemBackground"
                        app:icon="@drawable/ic_bus"
                        app:name="@string/bus"/>
                    <com.lvqingyang.iwuster.view.DiscoverItem
                        android:id="@+id/di_yellow_page"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:background="?android:attr/selectableItemBackground"
                        app:icon="@drawable/ic_yellow_page"
                        app:name="@string/yellow_page"/>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_spacing"
            app:cardElevation="0dp"
            app:cardCornerRadius="@dimen/card_corner_radius">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_hint"
                    android:drawableLeft="@drawable/shape_tag"
                    android:drawablePadding="@dimen/sub_small_spacing"
                    android:padding="@dimen/small_spacing"
                    android:layout_marginStart="@dimen/s_small_spacing"
                    android:textSize="@dimen/sub_medium_text"
                    android:text="@string/other_fun"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.lvqingyang.iwuster.view.DiscoverItem
                        android:id="@+id/di_class_note"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:background="?android:attr/selectableItemBackground"
                        app:icon="@drawable/ic_class_note"
                        app:name="@string/class_note"/>
                    <com.lvqingyang.iwuster.view.DiscoverItem
                        android:id="@+id/di_lost_and_found"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:background="?android:attr/selectableItemBackground"
                        app:icon="@drawable/ic_lost_and_found"
                        app:name="@string/lost_and_found"/>
                    <com.lvqingyang.iwuster.view.DiscoverItem
                        android:id="@+id/di_secret"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:background="?android:attr/selectableItemBackground"
                        app:icon="@drawable/ic_secret"
                        app:name="@string/secret"/>
                </LinearLayout>


            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>